fix overflow issue on login

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -149,3 +149,7 @@
 .hide {
   display: none;
 }
+
+.flex-item {
+  margin: auto;
+}
